2004-09-21  William Jon McCann  <mccann@jhu.edu>

	* gui/component/component-factory.c (factory): Quiet debug messages.

	* gui/widgets/e-addressbook-view.c (eab_view_new): Remove
	unnecessary label widget placeholder.  Make vertical scrollbar
	policy automatic.  Use gtk_paned_add2 instead of
	gtk_container_add.

	* gui/component/apps_evolution_addressbook.schemas.in.in: Add
	missing show_preview schema.  Add missing long descriptions.

2004-09-13  Rodney Dawes  <dobey@novell.com>

	* gui/contact-editor/e-contact-editor.c (show_help_cb):
	Point at the correct XML file for documentation

2004-09-13 Sivaiah Nallagatla <snallagatla@novell.com>

       * gui/contact-editor/e-contact-editor.c
       (sensitize_address) : check for _LABEL
       type address fields also in supported fileds
       while sensitizing the address fields

2004-09-03  JP Rosevear  <jpr@novell.com>
 
 	Fixes #63191
 	
 	* gui/contact-list-editor/contact-list-editor.glade: set the title
 	properly
	
2004-09-08  Not Zed  <NotZed@Ximian.com>

	** See bug #64080.

	* gui/component/Makefile.am (libevolution_addressbook_la_LIBADD):
	link addressbook to camel.

2004-09-04 Sivaiah Nallagatla <snallagatla@novell.com>

	* gui/widgets/e-addressbook-view.h : add
	new widget variable contact_dsiplay_window to _EABView strcut
	to store. Remove unused scrolled varible
	* gui/widgets/e-addressbook-view.c (eab_view_init)
	(eab_view_dispose) : initialize and unref the new widget
	added 
	(eab_view_new) : remove the loca variable scrlled_window 
	instead use eav->contact_display_window
	(eab_view_show_contact_preview) : show/hide contact_display_window 
	instead of contact_display
	Fixes #64024 


2004-08-27  Not Zed  <NotZed@Ximian.com>

	** See bug #62856 (workaround).

	* gui/component/addressbook.c (addressbook_authenticate): add
	online flag to password request.

	** See bug #64011.

	* gui/component/addressbook-view.c (edit_addressbook_cb): Remove